Some changes in description cells

--- a/notebooks/Hail_tutorial-GWAS-vcf.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf.ipynb
@@ -1116,9 +1116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c075f48c-7edc-4dea-b16d-a392c9bff300",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "p = hl.plot.histogram(mt.variant_qc.dp_stats.mean, legend='Variant QC DP')\n",
@@ -1243,13 +1241,13 @@
    "id": "d40a4335-b9ae-417a-a4b4-ed1f4c1d6514",
    "metadata": {},
    "source": [
-    "The observed p-values drift away from the expectation immediately. Either every SNP in our dataset is causally linked to caffeine consumption (unlikely), or there’s a confounder.\n",
+    "The observed p-values deviate from the expected distribution immediately. Either every SNP in our dataset is causally linked to caffeine consumption (which is highly unlikely), or there's an underlying confounder.\n",
     "\n",
-    "We didn’t tell you, but sample ancestry was actually used to simulate this phenotype. This leads to a **stratified distribution** of the phenotype. The solution is to include ancestry as a covariate in our regression.\n",
+    "In fact, the phenotype was simulated using sample ancestry (in addition to a specific locus associated with caffeine consumption). This results in a **stratified phenotype distribution**. To correct for this, we need to include ancestry as a covariate in our regression model.\n",
     "\n",
-    "The **linear_regression_rows** function can also take column fields to use as covariates. We already annotated our samples with reported ancestry, but it is good to be skeptical of these labels due to human error. Genomes don’t have that problem! Instead of using reported ancestry, we will use genetic ancestry by including computed principal components in our model.\n",
+    "The `linear_regression_rows` function allows us to include column fields as covariates. Although we’ve already annotated samples with reported ancestry, such labels can be unreliable due to human error. Genomes, however, don't suffer from this issue. Rather than using reported ancestry, we’ll use **genetic ancestry** by incorporating the computed principal components (PCs) into our model.\n",
     "\n",
-    "The `pca` function produces eigenvalues as a list and sample PCs as a Table, and can also produce variant loadings when asked. The `hwe_normalized_pca` function does the same, using HWE-normalized genotypes for the PCA."
+    "The `pca` function outputs eigenvalues as a list and sample PCs as a `Table`; it can also generate variant loadings if requested. The `hwe_normalized_pca` function offers similar outputs, but uses Hardy-Weinberg Equilibrium (HWE)-normalized genotypes for the PCA.\n"
    ]
   },
   {
@@ -1307,7 +1305,7 @@
    "id": "6fccd0ff-fcf6-4629-bd89-dfc2cddf8beb",
    "metadata": {},
    "source": [
-    "Now that we’ve got principal components per sample, we may as well plot them! Human history exerts a strong effect in genetic datasets. Even with a 50MB sequencing dataset, we can recover the major human populations."
+    "Since we now have the principal components for each sample, we can annotate them to the MatrixTable's column fields and and plot them to examine how well they align with the major human populations."
    ]
   },
   {
@@ -1318,16 +1316,6 @@
    "outputs": [],
    "source": [
     "mt = mt.annotate_cols(scores = pcs[mt.s].scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "543c697b-3b95-4e78-9f5a-50bb720ce056",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mt.describe()"
    ]
   },
   {
@@ -1349,7 +1337,7 @@
    "id": "b770b933-7160-4c0f-9d1d-e7f37c038758",
    "metadata": {},
    "source": [
-    "Now we can rerun our linear regression, controlling for sample sex and the first few principal components. We’ll do this with input variable the number of alternate alleles as before, and again with input variable the genotype dosage derived from the PL field."
+    "Now we can rerun our linear regression, controlling for sample sex and the first few principal components."
    ]
   },
   {
@@ -1380,7 +1368,7 @@
    "id": "571c00cd-3a5c-4f19-86c9-a8f93f4d59c4",
    "metadata": {},
    "source": [
-    "We’ll first make a Q-Q plot to assess inflation…"
+    "Q-Q plot and Manhattan plot:"
    ]
   },
   {
@@ -1395,14 +1383,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "97ad3912-ccd1-4300-8feb-7a3915dc85b3",
-   "metadata": {},
-   "source": [
-    "That’s more like it! This shape is indicative of a well-controlled (but not especially well-powered) study. And now for the Manhattan plot:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bec5fb11-a4bc-4cd1-bbf9-6e143718ef7a",
@@ -1411,14 +1391,6 @@
    "source": [
     "p = hl.plot.manhattan(gwas.p_value)\n",
     "show(p)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fceeeea8-422d-4521-bf0d-94f4923542ce",
-   "metadata": {},
-   "source": [
-    "We have found a caffeine consumption locus!"
    ]
   },
   {
