--- a/notebooks/Hail_tutorial-GWAS-vcf.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf.ipynb
@@ -325,7 +325,7 @@
     "n_variants = mt.count_rows() \n",
     "n_samples = mt.count_cols()\n",
     "\n",
-    "print (f\"\\n\\nTable has {n_variants} variants and {n_samples} samples\") "
+    "print (f\"\\n\\nThe dataset has {n_variants} variants and {n_samples} samples\") "
    ]
   },
   {
@@ -437,7 +437,7 @@
    },
    "outputs": [],
    "source": [
-    "entry_fields.show(n_samples + 1)"
+    "entry_fields.select(entry_fields.GT, entry_fields.AD, entry_fields.DP, entry_fields.GQ, entry_fields.PL).show(n_samples + 1)"
    ]
   },
   {
@@ -625,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Adding a new column to the table. The not listed columns will be deleted in the new table\n",
+    "## Adding a new column to the table. The not listed columns will not be deleted in the new table\n",
     "row_table.annotate(new_col= row_table.qual * 10).show(5)"
    ]
   },
