--- a/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
@@ -15,7 +15,7 @@
     "---\n",
     "\n",
     "- **[MatrixTable](https://hail.is/docs/0.2/overview/matrix_table.html)**  \n",
-    "  The `MatrixTable` is the **primary data structure** for genomic datasets. It can import genomic data from many formats, such as VCF.  \n",
+    "  The `MatrixTable` is the **primary data structure** for genomic datasets. Genomic data can be imported to the MatrixTable from many formats, such as VCF.  \n",
     "  The `MatrixTable` builds upon the Hail `Table` and is conceptually similar to a two-dimensional matrix with two tables attached to it. It comprises four components:\n",
     "\n",
     "  - **Row fields**: A set of fields that are constant for every column. These typically represent **variants** (e.g., positions in the genome).\n",
@@ -231,32 +231,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2f6ab9-715c-4f47-a3bf-cf52e5912bbe",
-   "metadata": {},
-   "source": [
-    "#### Reading vcf with Pandas (N/A if the vcf is stored on s3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd9a733-da94-4149-b507-c636ec4087e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vcf_pd = None\n",
-    "if \"s3://\" not in vcf_fn: \n",
-    "    vcf_pd = pd.read_csv(vcf_fn, sep=\"\\t\", header=109, low_memory=False)\n",
-    "vcf_pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "55d74bab-ae72-4ebb-a48c-87577ba8b411",
    "metadata": {},
    "source": [
-    "### Import VCF to Hail Matrix Table\n",
-    "To work with genomic data stored in a **VCF**, we need to first import and converted it into a **Hail Matrix Table**\n"
+    "### Import VCF to Hail MatrixTable\n",
+    "To work with genomic data stored in a **VCF**, we need to first import and convert it into a **Hail MatrixTable**\n"
    ]
   },
   {
@@ -300,7 +279,7 @@
    "id": "50194496-b92f-41a7-a0d6-cf1735105719",
    "metadata": {},
    "source": [
-    "#### Counting samples and variant: MatrixTable `count_rows` and `count_cols` methods and Table `count` method"
+    "#### Counting samples and variant: MatrixTable `count_rows` and `count_cols` methods"
    ]
   },
   {
@@ -455,14 +434,6 @@
     "\n",
     "# To show only entry field names\n",
     "print (list(entry_structure))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e97e2b8-f02a-45b0-8540-24af536c47a8",
-   "metadata": {},
-   "source": [
-    "To look at the first few genotype calls, we can use entries along with select and take. The **`take` method collects the first n rows into a Python list**. Alternatively, we can use the `show` method, which prints the first n rows to the console in a table format."
    ]
   },
   {
@@ -698,7 +669,7 @@
    "id": "2d14635f-7e78-43a1-93b0-bfc34ef750b5",
    "metadata": {},
    "source": [
-    "#### Grouping to Summarize Information Within Superpopulations: The Table [`group_by`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.group_by) Method\n",
+    "#### Grouping to summarize information within superpopulations: The Table [`group_by`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.group_by) method\n",
     "\n",
     "The Table `group_by` method allows you to apply aggregation functions to groups of rows based on specified keys. When working with a grouped table, the [`aggregate`](https://hail.is/docs/0.2/hail.GroupedTable.html#hail.GroupedTable.aggregate) method behaves slightly differently from `Table.aggregate`: it requires a *name expression* rather than a simple expression, and it returns a new table rather than a single result (such as a number or a struct). The *name expression* means that each aggregation must be assigned to a field name, which becomes a column in the resulting aggregated table."
    ]
@@ -990,7 +961,7 @@
    "id": "c2317313-07b7-419d-88e0-58bda02c2825",
    "metadata": {},
    "source": [
-    "Variant QC computes per per-variant metric useful for quality control. It is a bit more of the same of sample_qc: we can use the [`variant_qc`](https://hail.is/docs/0.2/methods/genetics.html#hail.methods.variant_qc) function to produce a variety of useful statistics, plot them, and then filter. This is made at row level beacause they are stats on variants."
+    "Variant QC computes per per-variant metric useful for quality control. It is a bit more of the same of sample_qc: we can use the [`variant_qc`](https://hail.is/docs/0.2/methods/genetics.html#hail.methods.variant_qc) function to produce a variety of useful statistics and then filter. This is made at row level beacause they are stats on variants."
    ]
   },
   {
