--- a/notebooks/Hail_tutorial-GWAS-vcf.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf.ipynb
@@ -15,7 +15,7 @@
     "---\n",
     "\n",
     "- **[MatrixTable](https://hail.is/docs/0.2/overview/matrix_table.html)**  \n",
-    "  The `MatrixTable` is the **primary data structure** for genomic datasets. It can import genomic data from many formats, such as VCF.  \n",
+    "  The `MatrixTable` is the **primary data structure** for genomic datasets. Genomic data can be imported to the MatrixTable from many formats, such as VCF.  \n",
     "  The `MatrixTable` builds upon the Hail `Table` and is conceptually similar to a two-dimensional matrix with two tables attached to it. It comprises four components:\n",
     "\n",
     "  - **Row fields**: A set of fields that are constant for every column. These typically represent **variants** (e.g., positions in the genome).\n",
@@ -255,8 +255,8 @@
    "id": "55d74bab-ae72-4ebb-a48c-87577ba8b411",
    "metadata": {},
    "source": [
-    "### Import VCF to Hail Matrix Table\n",
-    "To work with genomic data stored in a **VCF**, we need to first import and converted it into a **Hail Matrix Table**\n"
+    "### Import VCF to Hail MatrixTable\n",
+    "To work with genomic data stored in a **VCF**, we need to first import and convert it into a **Hail MatrixTable**\n"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "id": "50194496-b92f-41a7-a0d6-cf1735105719",
    "metadata": {},
    "source": [
-    "#### Counting samples and variant: MatrixTable `count_rows` and `count_cols` methods and Table `count` method"
+    "#### Counting samples and variant: MatrixTable `count_rows` and `count_cols` methods"
    ]
   },
   {
@@ -747,7 +747,7 @@
    "id": "2d14635f-7e78-43a1-93b0-bfc34ef750b5",
    "metadata": {},
    "source": [
-    "#### Grouping to Summarize Information Within Superpopulations: The Table [`group_by`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.group_by) Method\n",
+    "#### Grouping to summarize information within superpopulations: The Table [`group_by`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.group_by) method\n",
     "\n",
     "The Table `group_by` method allows you to apply aggregation functions to groups of rows based on specified keys. When working with a grouped table, the [`aggregate`](https://hail.is/docs/0.2/hail.GroupedTable.html#hail.GroupedTable.aggregate) method behaves slightly differently from `Table.aggregate`: it requires a *name expression* rather than a simple expression, and it returns a new table rather than a single result (such as a number or a struct). The *name expression* means that each aggregation must be assigned to a field name, which becomes a column in the resulting aggregated table."
    ]
