removed some cells

--- a/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
@@ -410,59 +410,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa9b4f8-16ba-43a9-b9ab-1029c251425e",
-   "metadata": {},
-   "source": [
-    "#### Show attributes of entry fields. An example with the genotype field.\n",
-    " - `entry` attribute\n",
-    " - **Call** `phased` attributes\n",
-    " - **Call** `summarize` method"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9304fb17-61dd-47cc-8f96-15d45eb9d679",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Attributes of entry fields\n",
-    "entry_structure = mt.entry\n",
-    "\n",
-    "# The StructExpression\n",
-    "print (entry_structure)\n",
-    "\n",
-    "# To show only entry field names\n",
-    "print (list(entry_structure))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d392ae7-ef97-422d-a78e-aa130cd2e1ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gt_expr = mt.GT # Takes the GT entry field for all samples \n",
-    "gt_expr.phased.show(5) # Show the phased attribute of the GT field (It is False for not phased haplotypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1257c22-ea80-45b6-a915-65dff49937c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gt_expr.summarize()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f3abb72b-1c45-4d19-8799-6cc486304fe6",
    "metadata": {},
    "source": [
-    "##### Global values.\n",
+    "### Global fields.\n",
     "Common values of the matrix table"
    ]
   },
