removed reference genome

--- a/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "## Read a vcf file, convert to a matrix table and save it.\n",
-    "mt = hl.import_vcf(vcf_fn, reference_genome=\"GRCh37\") \n",
+    "mt = hl.import_vcf(vcf_fn) \n",
     "mt.write(mt_fn, overwrite=True)"
    ]
   },
