Change the position of table manipulation methods description

--- a/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
+++ b/notebooks/Hail_tutorial-GWAS-vcf-seminario.ipynb
@@ -409,6 +409,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2fb21bb-9a3c-4306-864a-7df2cc195d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt.GT.summarize()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f3abb72b-1c45-4d19-8799-6cc486304fe6",
    "metadata": {},
@@ -425,91 +435,6 @@
    "outputs": [],
    "source": [
     "mt.globals_table().show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d44cbb8-dcab-4ebb-80f2-b9e697c0e980",
-   "metadata": {},
-   "source": [
-    "### How to access and insert data into a Hail Table using the [`select`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.select) and [`annotate`](https://hail.is/docs/0.2/hail.Table.html#hail.Table.annotate) methods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f2b6deb-8044-46dc-834f-f9b318358e8d",
-   "metadata": {},
-   "source": [
-    "We can use the Hail Table `select` method to extract specific fields from a table.\n",
-    "\n",
-    "The `select` method takes either a string referring to a field name in the table or a Hail expression. If no arguments are provided, only the row key fields (`locus` and `alleles`) are retained.\n",
-    "\n",
-    "The `select` method can also be used to add or transform fields, but the resulting table will include **only** the specified fields and any new fields defined in the expression; all other fields will be removed.\n",
-    "\n",
-    "In contrast, the `annotate` method adds or modifies fields while preserving the entire original table structure. It returns the full table with the new or updated fields included.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a085591d-ca43-44a2-9aa2-cb3bd35c9cf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row_table.show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4502bc2-e4c1-42ae-b114-bde9af9068c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pprint(row_table.select().show(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "801acb1f-33bb-4771-bf9f-ea88ce399783",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Select a field of the row table: Simple field and nested field\n",
-    "row_table.select(\"qual\", row_table.info.AC).show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d760aec6-f024-4abc-8052-6cd3009011c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Adding a new column to the table. The not listed columns will be deleted in the new table\n",
-    "row_table.select(row_table.qual, new_col= row_table.qual * 2).show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7d24372-3a72-4cc7-9c94-c63d69ddfe71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Adding a new column to the table. The not listed columns will not be deleted in the new table\n",
-    "row_table.annotate(new_col= row_table.qual * 10).show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f33519d4-ca90-4d42-9239-b0923edfba08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mt.rows().show(5)"
    ]
   },
   {
@@ -559,6 +484,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18151a12-828d-4575-ada3-4e04900dc56c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotation_table.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4960fb8-a254-41b9-9867-ea2494e535b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotation_table.select(\"CaffeineConsumption\", new_col=annotation_table.CaffeineConsumption * 2).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "172235de-8ee0-44c5-8373-30d7693e6e23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotation_table.annotate(new_col=annotation_table.CaffeineConsumption * 2).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea33922-9c6f-43fb-b311-2967a1c53c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotation_table.drop(annotation_table.CaffeineConsumption).show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b03b4b6e-751b-4941-bd72-51bb4b72cba1",
    "metadata": {},
    "outputs": [],
    "source": [
